--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -51,3 +51,37 @@ header a {
     color: #edf0f1;
     text-decoration: none
 }
+/* Modal style */
+.modal {
+     display: none; /* Hidden by default */
+     position: fixed; /* Stay in place */
+     z-index: 1;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     overflow: auto; /* Enable scroll */
+     background-color: rgb(0,0,0);
+     background-color: rgba(0,0,0,0.4);
+}
+/* Modal content */
+.modal-content {
+     background-color: #fefefe;
+     margin: 15% auto; /* 15% from the top and centered */
+     padding: 20px;
+     border: 1px solid #888;
+     width: 80%;
+}
+/* Close button */
+.close {
+     color: #aaa;
+     float: right;
+     font-size: 28px;
+     font-weight: bold;
+}
+.close:hover,
+.close:focus {
+     color: black;
+     text-decoration: none;
+     cursor: pointer;
+}
